add sharedfiles component

--- a/scripts/installer/windows/product.wxs
+++ b/scripts/installer/windows/product.wxs
@@ -149,6 +149,7 @@
         <ComponentGroup Id="ProductComponents">
           <ComponentGroupRef Id="PromptflowCliComponentGroup"/>
           <ComponentGroupRef Id="PromptflowCliSettingsGroup"/>
+          <ComponentGroupRef Id="SharedFiles"/>
         </ComponentGroup>
     </Fragment>
 </Wix>
