--- a/scripts/readme/ghactions_driver/workflow_templates/basic_workflow.yml.jinja2
+++ b/scripts/readme/ghactions_driver/workflow_templates/basic_workflow.yml.jinja2
@@ -3,13 +3,13 @@
 runs-on: ubuntu-latest
 steps:
   - name: Checkout repository
-    uses: actions/checkout@v3
+    uses: actions/checkout@v4
   - name: Generate config.json for canary workspace (scheduled runs only)
     if: github.event_name == 'schedule'
-    run: echo '${{ secrets.TEST_WORKSPACE_CONFIG_JSON_CANARY }}' > ${{ github.workspace }}/examples/config.json
+    run: echo '${{ '{{' }} secrets.TEST_WORKSPACE_CONFIG_JSON_CANARY }}' > ${{ '{{' }} github.workspace }}/examples/config.json
   - name: Generate config.json for production workspace
     if: github.event_name != 'schedule'
-    run: echo '${{ secrets.EXAMPLE_WORKSPACE_CONFIG_JSON_PROD }}' > ${{ github.workspace }}/examples/config.json
+    run: echo '${{ '{{' }} secrets.EXAMPLE_WORKSPACE_CONFIG_JSON_PROD }}' > ${{ '{{' }} github.workspace }}/examples/config.json
   - name: Azure Login
     uses: azure/login@v1
     with:
