--- a/src/promptflow/promptflow/_sdk/data/executable/flow_test_main.py.jinja2
+++ b/src/promptflow/promptflow/_sdk/data/executable/flow_test_main.py.jinja2
@@ -6,11 +6,12 @@ from PIL import Image
 import streamlit as st
 from streamlit_quill import st_quill
 
-from promptflow._sdk._serving.flow_invoker import FlowInvoker
+from promptflow import load_flow
+from promptflow._utils.multimedia_utils import convert_multimedia_data_to_base64, persist_multimedia_data
+from promptflow._sdk._utils import dump_flow_result
 
 from utils import render_single_dict_message, parse_list_from_html, parse_image_content
 
-invoker = None
 {% set indent_level = 4 %}
 
 def start():
@@ -44,27 +45,40 @@ def start():
             render_message("user", kwargs)
         # Append chat history to kwargs
         response = run_flow({'{{chat_history_input_name}}': get_chat_history_from_session(), **kwargs})
+
         # Get base64 for multi modal object
-        resolved_outputs = invoker._convert_multimedia_data_to_base64(response)
+        resolved_outputs = {
+            k: convert_multimedia_data_to_base64(v, with_type=True, dict_type=True)
+            for k, v in response.items()
+        }
         st.session_state.messages.append(("assistant", resolved_outputs))
-        session_state_history.update({"outputs": response.output})
+        session_state_history.update({"outputs": response})
         st.session_state.history.append(session_state_history)
-        invoker._dump_invoke_result(response)
+
+        dump_path = Path('{{flow_path}}').parent
+        {% if is_chat_flow %}
+        dump_file_prefix = "chat"
+        {% else %}
+        dump_file_prefix = "flow"
+        {% endif %}
+        response = persist_multimedia_data(
+            response, base_dir=dump_path, sub_dir=Path(".promptflow/output")
+        )
+
+        # need discussion on how to dump flow result
+        # dump_flow_result(flow_folder=dump_path, flow_result=response, prefix=dump_file_prefix)
         with container:
             render_message("assistant", resolved_outputs)
 
 
     def run_flow(data: dict) -> dict:
-        global invoker
-        if not invoker:
-            flow = Path('{{flow_path}}')
-            dump_path = Path('{{flow_path}}').parent
-            if flow.is_dir():
-                os.chdir(flow)
-            else:
-                os.chdir(flow.parent)
-            invoker = FlowInvoker(flow, connection_provider="""{{ connection_provider }}""", dump_to=dump_path)
-        result = invoker._invoke(data)
+        flow = Path('{{flow_path}}')
+        if flow.is_dir():
+            os.chdir(flow)
+        else:
+            os.chdir(flow.parent)
+        f = load_flow(flow)
+        result = f(**data)
         return result
 
     image = Image.open(Path(__file__).parent / "logo.png")
