--- a/scripts/installer/windows/product.wxs
+++ b/scripts/installer/windows/product.wxs
@@ -92,7 +92,7 @@
             ExeCommand="cmd.exe /c SC CREATE PromptService &quot;displayname=Prompt Flow Service&quot; start=auto type=userown binPath= &quot;\&quot;&quot;&quot;&quot;%ProgramFiles%\promptflow\pfs.exe\&quot;&quot;&quot;&quot;"
             Return="check" />
         <InstallExecuteSequence>
-          <Custom Action="InstallPromptFlowService" After="InstallFinalize">NOT Installed AND NOT WIX_UPGRADE_DETECTED</Custom>
+          <Custom Action="InstallPromptFlowService" Before="InstallFinalize">NOT Installed AND NOT WIX_UPGRADE_DETECTED</Custom>
         </InstallExecuteSequence>
 
         <CustomAction Id="UninstallPromptFlowService"
@@ -102,7 +102,7 @@
             ExeCommand="cmd.exe /c SC DELETE PromptService"
             Return="check" />
         <InstallExecuteSequence>
-          <Custom Action="UninstallPromptFlowService" After="InstallFinalize">REMOVE="ALL"</Custom>
+          <Custom Action="UninstallPromptFlowService" Before="InstallFinalize">REMOVE="ALL"</Custom>
         </InstallExecuteSequence>
 
     </Product>
