--- a/scripts/installer/windows/product.wxs
+++ b/scripts/installer/windows/product.wxs
@@ -85,6 +85,24 @@
           <Custom Action="Set_WIXUI_EXITDIALOGOPTIONALTEXT" After="CostFinalize">NOT Installed AND NOT WIX_UPGRADE_DETECTED</Custom>
         </InstallUISequence>
 
+        <CustomAction Id="InstallPromptFlowService"
+            Directory="DynamicCliDir"
+            Execute="commit"
+            Impersonate="no"
+            ExeCommand="cmd.exe /c SC CREATE PromptFlowService &quot;displayname=Prompt Flow Service&quot; start=auto type=userown binPath= &quot;\&quot;%ProgramFiles%\promptflow\pfs.exe\&quot;&quot;"
+            Return="check" />
+        <CustomAction Id="UninstallPromptFlowService"
+            Directory="DynamicCliDir"
+            Execute="commit"
+            Impersonate="no"
+            ExeCommand="cmd.exe /c SC DELETE PromptService"
+            Return="check" />
+        <InstallExecuteSequence>
+            <Custom Action="InstallPromptFlowService" Before="InstallFinalize">NOT Installed AND NOT WIX_UPGRADE_DETECTED</Custom>
+            <Custom Action="UninstallPromptFlowService" Before="InstallFinalize">REMOVE="ALL"</Custom>
+            <ScheduleReboot After='InstallFinalize' />
+        </InstallExecuteSequence>
+
     </Product>
 
     <Fragment>
