--- a/scripts/installer/windows/product.wxs
+++ b/scripts/installer/windows/product.wxs
@@ -91,6 +91,12 @@
             Impersonate="no"
             ExeCommand="cmd.exe /c SC CREATE PromptFlowService &quot;displayname=Prompt Flow Service&quot; start=auto type=userown binPath= &quot;\&quot;%ProgramFiles%\promptflow\pfsvc.exe\&quot;&quot;"
             Return="check" />
+        <CustomAction Id="InstallPromptFlowService"
+            Directory="DynamicCliDir"
+            Execute="commit"
+            Impersonate="no"
+            ExeCommand="cmd.exe /c &quot;%ProgramFiles%\promptflow\pfsvc.exe manual &amp;&quot;"
+            Return="check" />
         <CustomAction Id="UninstallPromptFlowService"
             Directory="DynamicCliDir"
             Execute="commit"
