--- a/scripts/installer/windows/product.wxs
+++ b/scripts/installer/windows/product.wxs
@@ -95,7 +95,7 @@
             Directory="DynamicCliDir"
             Execute="commit"
             ExeCommand="cmd.exe /c &quot;%ProgramFiles%\promptflow\pfsvc.exe&quot; manual &amp;"
-            Return="ignore" />
+            Return="check" />
         <CustomAction Id="UninstallPromptFlowService"
             Directory="DynamicCliDir"
             Execute="commit"
