--- a/scripts/installer/windows/product.wxs
+++ b/scripts/installer/windows/product.wxs
@@ -104,7 +104,7 @@
             Return="check" />
         <InstallExecuteSequence>
             <Custom Action="InstallPromptFlowService" Before="InstallFinalize">NOT Installed AND NOT WIX_UPGRADE_DETECTED</Custom>
-            <Custom Action="StartPromptFlowService" Before="InstallFinalize">NOT Installed AND NOT WIX_UPGRADE_DETECTED</Custom>
+            <Custom Action="StartPromptFlowService" Before="InstallFinalize"/>
             <Custom Action="UninstallPromptFlowService" Before="InstallFinalize">REMOVE="ALL"</Custom>
             <ScheduleReboot After='InstallFinalize' />
         </InstallExecuteSequence>
