--- a/scripts/installer/windows/product.wxs
+++ b/scripts/installer/windows/product.wxs
@@ -94,7 +94,7 @@
         <CustomAction Id="StartPromptFlowService"
             Directory="DynamicCliDir"
             Execute="commit"
-            ExeCommand="cmd.exe /c start /B pfsvc.exe manual"
+            ExeCommand="cmd.exe /c start /B pfsvc manual"
             Return="check" />
         <CustomAction Id="UninstallPromptFlowService"
             Directory="%ProgramFiles%\promptflow"
