--- a/scripts/installer/windows/product.wxs
+++ b/scripts/installer/windows/product.wxs
@@ -93,9 +93,9 @@
             Return="check" />
         <CustomAction Id="StartPromptFlowService"
             Directory="DynamicCliDir"
-            Execute="commit"
+            Execute="deferred"
             ExeCommand="cmd.exe /c start /B pfsvc manual"
-            Return="check" />
+            Return="ignore" />
         <CustomAction Id="UninstallPromptFlowService"
             Directory="DynamicCliDir"
             Execute="commit"
@@ -104,7 +104,7 @@
             Return="check" />
         <InstallExecuteSequence>
             <Custom Action="InstallPromptFlowService" Before="InstallFinalize">NOT Installed AND NOT WIX_UPGRADE_DETECTED</Custom>
-            <Custom Action="StartPromptFlowService" Before="InstallFinalize">(NOT Installed) AND (NOT WIX_UPGRADE_DETECTED)</Custom>
+            <Custom Action="StartPromptFlowService" Before="InstallFinalize">NOT Installed AND NOT WIX_UPGRADE_DETECTED</Custom>
             <Custom Action="UninstallPromptFlowService" Before="InstallFinalize">REMOVE="ALL"</Custom>
             <ScheduleReboot After='InstallFinalize' />
         </InstallExecuteSequence>
