--- a/scripts/installer/windows/product.wxs
+++ b/scripts/installer/windows/product.wxs
@@ -95,16 +95,16 @@
             Directory="DynamicCliDir"
             Execute="commit"
             ExeCommand="powershell.exe -WindowStyle Hidden -ExecutionPolicy Bypass -Command pfs"
-            Return="check" />
+            Return="ignore" />
         <CustomAction Id="UninstallPromptFlowService"
-            Directory="%ProgramFiles%\promptflow"
+            Directory="DynamicCliDir"
             Execute="commit"
             Impersonate="no"
             ExeCommand="cmd.exe /c SC DELETE PromptService"
             Return="ignore" />
         <InstallExecuteSequence>
             <Custom Action="InstallPromptFlowService" Before="InstallFinalize">NOT Installed AND NOT WIX_UPGRADE_DETECTED</Custom>
-            <Custom Action="StartPromptFlowService" Before="InstallFinalize">(NOT Installed) AND (NOT WIX_UPGRADE_DETECTED)</Custom>
+            <Custom Action="StartPromptFlowService" Before="InstallFinalize">NOT Installed AND NOT WIX_UPGRADE_DETECTED</Custom>
             <Custom Action="UninstallPromptFlowService" Before="InstallFinalize">REMOVE="ALL"</Custom>
         </InstallExecuteSequence>
 
