check env.python_requirements_txt before COPY it to docker image

--- a/src/promptflow/promptflow/_sdk/data/docker/Dockerfile.jinja2
+++ b/src/promptflow/promptflow/_sdk/data/docker/Dockerfile.jinja2
@@ -10,7 +10,9 @@ FROM docker.io/continuumio/miniconda3:latest
 
 WORKDIR /
 
+{% if env.python_requirements_txt %}
 COPY ./flow/{{env.python_requirements_txt}} /flow/{{env.python_requirements_txt}}
+{% end %}
 
 # create conda environment
 {% if env.conda_file %}
