--- a/src/promptflow/promptflow/_sdk/data/docker/Dockerfile.jinja2
+++ b/src/promptflow/promptflow/_sdk/data/docker/Dockerfile.jinja2
@@ -10,10 +10,14 @@ FROM docker.io/continuumio/miniconda3:latest
 
 WORKDIR /
 
-COPY ./flow /flow
+{% if env.python_requirements_txt %}
+COPY ./flow/{{env.python_requirements_txt}} /flow/{{env.python_requirements_txt}}
+{% endif %}
 
 # create conda environment
 {% if env.conda_file %}
+COPY ./flow/{{env.conda_file}} /flow/{{env.conda_file}}
+
 RUN conda create -f flow/{{env.conda_file}} -q && \
 {% else %}
 RUN conda create -n {{env.conda_env_name}} python=3.9.16 pip=23.0.1 -q -y && \
@@ -33,6 +37,8 @@ RUN conda create -n {{env.conda_env_name}} python=3.9.16 pip=23.0.1 -q -y && \
     conda run -n {{env.conda_env_name}} pip install gunicorn==20.1.0 && \
     conda run -n {{env.conda_env_name}} pip cache purge && \
     conda clean -a -y
+
+COPY ./flow /flow
 
 {% if env.setup_sh %}
 RUN conda run -n {{env.conda_env_name}} sh /flow/{{ env.setup_sh }}
