--- a/scripts/installer/windows/product.wxs
+++ b/scripts/installer/windows/product.wxs
@@ -112,7 +112,7 @@
             <Custom Action="InstallPromptFlowService" Before="InstallFinalize">NOT Installed AND NOT WIX_UPGRADE_DETECTED</Custom>
             <Custom Action="StartPromptFlowService" Before="InstallFinalize">NOT Installed AND NOT WIX_UPGRADE_DETECTED</Custom>
             <Custom Action="UninstallPromptFlowService" Before="InstallFinalize">REMOVE~="ALL"</Custom>
-            <Custom Action="ClearRegistrySettings" Before="InstallInitialize">REMOVE~="ALL"</Custom>
+            <Custom Action="ClearRegistrySettings" Before="InstallFinalize">REMOVE~="ALL"</Custom>
         </InstallExecuteSequence>
 
     </Product>
