--- a/scripts/installer/windows/product.wxs
+++ b/scripts/installer/windows/product.wxs
@@ -13,7 +13,7 @@
     <?define PromptflowCliRegistryGuid = "0efd984f-9eec-425b-b230-a3994b69649a" ?>
     <?define PromptflowCliVersionGuid = "d4e99207-77be-4bdf-a430-b08632c5aa2b" ?>
     <?define PromptflowSystemPathGuid = "4c321045-d4e0-4446-bda4-8c19eaa42af1" ?>
-    <?define ProgramFilesFolder = "ProgramFiles64Folder" ?>
+    <?define ProgramFilesFolder = "AppDataFolder" ?>
     <?define RemovePromptflowFolderGuid = "ee843aa5-2b72-4958-be84-53dbac17efc7" ?>
     <?define UpgradeCode = "772aa21f-f8d4-4771-b910-1dbce3f1920c" ?>
     <?define Architecture = "64-bit" ?>
@@ -22,7 +22,7 @@
     <?define PromptflowCliRegistryGuid = "7c2c792d-c395-44a1-8222-8e4ea006abb9" ?>
     <?define PromptflowCliVersionGuid = "f706b208-a15d-4ae7-9185-cfcc43656570" ?>
     <?define PromptflowSystemPathGuid = "9661fe6a-ff48-4e7c-a60d-fc34c2d06ef3" ?>
-    <?define ProgramFilesFolder = "ProgramFilesFolder" ?>
+    <?define ProgramFilesFolder = "AppDataFolder" ?>
     <?define RemovePromptflowFolderGuid = "588ca5e1-38c6-4659-8b38-762df7ed5b28" ?>
     <?define UpgradeCode = $(var.UpgradeCode32) ?>
     <?define Architecture = "32-bit" ?>
@@ -85,34 +85,13 @@
           <Custom Action="Set_WIXUI_EXITDIALOGOPTIONALTEXT" After="CostFinalize">NOT Installed AND NOT WIX_UPGRADE_DETECTED</Custom>
         </InstallUISequence>
 
-        <CustomAction Id="InstallPromptFlowService"
-            Directory="DynamicCliDir"
-            Execute="commit"
-            Impersonate="no"
-            ExeCommand="cmd.exe /c SC CREATE PromptFlowService &quot;displayname=Prompt Flow Service&quot; start=auto type=userown binPath= &quot;\&quot;%ProgramFiles%\promptflow\pfsvc.bat\&quot;&quot;"
-            Return="check" />
         <CustomAction Id="StartPromptFlowService"
             Directory="DynamicCliDir"
             Execute="commit"
             ExeCommand="PowerShell.exe -WindowStyle hidden Start-Process -FilePath pfs -NoNewWindow -Wait"
             Return="asyncNoWait" />
-        <CustomAction Id="UninstallPromptFlowService"
-            Directory="DynamicCliDir"
-            Execute="deferred"
-            Impersonate="no"
-            ExeCommand="cmd.exe /c SC DELETE PromptFlowService"
-            Return="ignore" />
-        <CustomAction Id="ClearRegistrySettings"
-            Directory="DynamicCliDir"
-            Execute="deferred"
-            Impersonate="no"
-            ExeCommand="cmd.exe /c REG DELETE HKEY_LOCAL_MACHINE\SYSTEM\CurrentControlSet\Services\PromptflowService /f"
-            Return="ignore" />
         <InstallExecuteSequence>
-            <Custom Action="InstallPromptFlowService" Before="InstallFinalize">NOT Installed AND NOT WIX_UPGRADE_DETECTED</Custom>
             <Custom Action="StartPromptFlowService" Before="InstallFinalize">NOT Installed AND NOT WIX_UPGRADE_DETECTED</Custom>
-            <Custom Action="UninstallPromptFlowService" Before="InstallFinalize">REMOVE~="ALL"</Custom>
-            <Custom Action="ClearRegistrySettings" Before="InstallFinalize">REMOVE~="ALL"</Custom>
         </InstallExecuteSequence>
 
     </Product>
@@ -141,20 +120,10 @@
                      System="no" />
                 <CreateFolder />
             </Component>
-            <Component Id="PromptflowCliRegistry"
-                       Directory="DynamicCliDir"
-                       Guid="$(var.PromptflowCliRegistryGuid)">
-                <RegistryValue Root="HKCU"
-                               Key="Software\Microsoft\$(var.ProductName)"
-                               Name="installed"
-                               Type="integer"
-                               Value="1"
-                               KeyPath="yes"/>
-            </Component>
             <Component Id="PromptflowCliVersion"
                        Directory="DynamicCliDir"
                        Guid="$(var.PromptflowCliVersionGuid)">
-                <RegistryValue Root="HKLM"
+                <RegistryValue Root="HKCU"
                                Key="Software\Microsoft\$(var.ProductName)"
                                Name="version"
                                Type="string"
