--- a/scripts/installer/windows/product.wxs
+++ b/scripts/installer/windows/product.wxs
@@ -66,6 +66,19 @@
         <Property Id="ApplicationFolderName" Value="promptflow" />
         <Property Id="WixAppFolder" Value="WixPerMachineFolder" />
 
+
+        <Property Id="WIXUI_INSTALLDIR" Value="DynamicCliDir" />
+
+        <Directory Id="TARGETDIR" Name="SourceDir">
+            <Directory Id="$(var.ProgramFilesFolder)" Name="PFiles">
+                <Directory Id="DynamicCliDir" Name="promptflow" />
+            </Directory>
+        </Directory>
+
+
+        <UIRef Id="WixUI_InstallDir" />
+
+
         <Feature Id="ProductFeature" Title="promptflow" Level="1" AllowAdvertise="no">
             <ComponentGroupRef Id="ProductComponents" />
         </Feature>
@@ -95,17 +108,6 @@
 
     </Product>
 
-    <Fragment>
-        <Directory Id="TARGETDIR" Name="SourceDir">
-            <Directory Id="$(var.ProgramFilesFolder)">
-                <Directory Id="DynamicCliDir" Name="promptflow" />
-            </Directory>
-        </Directory>
-
-        <Property Id="WIXUI_INSTALLDIR" Value="DynamicCliDir" />
-        <UIRef Id="WixUI_InstallDir" />
-
-    </Fragment>
 
     <Fragment>
         <ComponentGroup Id="PromptflowCliSettingsGroup">
