--- a/scripts/installer/windows/product.wxs
+++ b/scripts/installer/windows/product.wxs
@@ -13,7 +13,7 @@
     <?define PromptflowCliRegistryGuid = "0efd984f-9eec-425b-b230-a3994b69649a" ?>
     <?define PromptflowCliVersionGuid = "d4e99207-77be-4bdf-a430-b08632c5aa2b" ?>
     <?define PromptflowSystemPathGuid = "4c321045-d4e0-4446-bda4-8c19eaa42af1" ?>
-    <?define ProgramFilesFolder = "ProgramFiles64Folder" ?>
+    <?define ProgramFilesFolder = "AppDataFolder" ?>
     <?define RemovePromptflowFolderGuid = "ee843aa5-2b72-4958-be84-53dbac17efc7" ?>
     <?define UpgradeCode = "772aa21f-f8d4-4771-b910-1dbce3f1920c" ?>
     <?define Architecture = "64-bit" ?>
@@ -22,7 +22,7 @@
     <?define PromptflowCliRegistryGuid = "7c2c792d-c395-44a1-8222-8e4ea006abb9" ?>
     <?define PromptflowCliVersionGuid = "f706b208-a15d-4ae7-9185-cfcc43656570" ?>
     <?define PromptflowSystemPathGuid = "9661fe6a-ff48-4e7c-a60d-fc34c2d06ef3" ?>
-    <?define ProgramFilesFolder = "ProgramFilesFolder" ?>
+    <?define ProgramFilesFolder = "AppDataFolder" ?>
     <?define RemovePromptflowFolderGuid = "588ca5e1-38c6-4659-8b38-762df7ed5b28" ?>
     <?define UpgradeCode = $(var.UpgradeCode32) ?>
     <?define Architecture = "32-bit" ?>
@@ -66,19 +66,6 @@
         <Property Id="ApplicationFolderName" Value="promptflow" />
         <Property Id="WixAppFolder" Value="WixPerMachineFolder" />
 
-
-        <Property Id="WIXUI_INSTALLDIR" Value="DynamicCliDir" />
-
-        <Directory Id="TARGETDIR" Name="SourceDir">
-            <Directory Id="$(var.ProgramFilesFolder)" Name="PFiles">
-                <Directory Id="DynamicCliDir" Name="promptflow" />
-            </Directory>
-        </Directory>
-
-
-        <UIRef Id="WixUI_InstallDir" />
-
-
         <Feature Id="ProductFeature" Title="promptflow" Level="1" AllowAdvertise="no">
             <ComponentGroupRef Id="ProductComponents" />
         </Feature>
@@ -108,6 +95,15 @@
 
     </Product>
 
+    <Fragment>
+        <Directory Id="TARGETDIR" Name="SourceDir">
+            <Directory Id="$(var.ProgramFilesFolder)" Name="PFiles">
+                <Directory Id="Company" Name="Microsoft" />
+                    <Directory Id="DynamicCliDir" Name="promptflow" />
+            </Directory>
+        </Directory>
+
+    </Fragment>
 
     <Fragment>
         <ComponentGroup Id="PromptflowCliSettingsGroup">
