Fix some comments

--- a/examples/flows/standard/describe-image/question_on_image.jinja2
+++ b/examples/flows/standard/describe-image/question_on_image.jinja2
@@ -1,5 +1,6 @@
 # system:
-You are a helpful assistant.
+As an AI assistant, your task involves interpreting images and responding to questions about the image.
+Remember to provide accurate answers based on the information present in the image.
 
 # user:
 {{question}}
