--- a/scripts/installer/windows/product.wxs
+++ b/scripts/installer/windows/product.wxs
@@ -8,10 +8,11 @@
     <?define ProductAuthor = "Microsoft Corporation" ?>
     <?define ProductResources = ".\resources\" ?>
     <?define UpgradeCode32 = "8b748161-e07a-48f2-8cdf-401480df4694" ?>
+    <?define LogFile = "logfile.txt" ?>
 
     <?if $(var.Platform) = "x64" ?>
     <?define PromptflowCliRegistryGuid = "0efd984f-9eec-425b-b230-a3994b69649a" ?>
-    <?define PromptflowCliVersionGuid = "d4e99207-77be-4bdf-a430-b08632c5aa2b" ?>
+    <?define PromptflowServiceGuid = "d4e99207-77be-4bdf-a430-b08632c5aa2b" ?>
     <?define PromptflowSystemPathGuid = "4c321045-d4e0-4446-bda4-8c19eaa42af1" ?>
     <?define ProgramFilesFolder = "ProgramFiles64Folder" ?>
     <?define RemovePromptflowFolderGuid = "ee843aa5-2b72-4958-be84-53dbac17efc7" ?>
@@ -20,7 +21,7 @@
 
     <?elseif $(var.Platform) = "x86" ?>
     <?define PromptflowCliRegistryGuid = "7c2c792d-c395-44a1-8222-8e4ea006abb9" ?>
-    <?define PromptflowCliVersionGuid = "f706b208-a15d-4ae7-9185-cfcc43656570" ?>
+    <?define PromptflowServiceGuid = "f706b208-a15d-4ae7-9185-cfcc43656570" ?>
     <?define PromptflowSystemPathGuid = "9661fe6a-ff48-4e7c-a60d-fc34c2d06ef3" ?>
     <?define ProgramFilesFolder = "ProgramFilesFolder" ?>
     <?define RemovePromptflowFolderGuid = "588ca5e1-38c6-4659-8b38-762df7ed5b28" ?>
@@ -87,7 +88,7 @@
         <CustomAction Id="StartPromptFlowService"
             Directory="APPLICATIONFOLDER"
             Execute="commit"
-            ExeCommand="PowerShell.exe -WindowStyle hidden Start-Process -FilePath pfs -NoNewWindow -Wait"
+            ExeCommand="PowerShell.exe -WindowStyle hidden Start-Process -FilePath pfs -NoNewWindow -Wait -RedirectStandardOutput $(var.LogFile) -RedirectStandardError $(var.LogFile) "
             Return="asyncNoWait" />
         <InstallExecuteSequence>
             <Custom Action="StartPromptFlowService" Before="InstallFinalize">NOT Installed AND NOT WIX_UPGRADE_DETECTED</Custom>
@@ -96,9 +97,10 @@
 
     <Fragment>
         <Directory Id="TARGETDIR" Name="SourceDir">
-            <Directory Id="$(var.ProgramFilesFolder)" Name="PFiles">
+            <Directory Id="$(var.ProgramFilesFolder)">
                 <Directory Id="APPLICATIONFOLDER" Name="promptflow" />
             </Directory>
+            <Directory Id="StartupFolder" />
         </Directory>
 
         <UIRef Id="WixUI_Advanced" />
@@ -120,16 +122,25 @@
                      System="no" />
                 <CreateFolder />
             </Component>
-            <Component Id="PromptflowCliVersion"
-                       Directory="APPLICATIONFOLDER"
-                       Guid="$(var.PromptflowCliVersionGuid)">
-                <RegistryValue Root="HKCU"
-                               Key="Software\Microsoft\$(var.ProductName)"
-                               Name="version"
-                               Type="string"
-                               Value="$(var.ProductVersion)"
-                               KeyPath="yes"/>
+
+            <Component Id="pfs.bat" Directory="APPLICATIONFOLDER" Guid="$(var.PromptflowServiceGuid)">
+                <File Id="pfs.bat" Source="$(var.PromptflowSource)\pfs.bat" KeyPath="yes" Checksum="yes"/>
             </Component>
+
+            <Component Id="ApplicationShortcut" Directory="StartupFolder" Guid="$(var.PromptflowCliRegistryGuid)">
+                <Shortcut Id="ApplicationStartMenuShortcut"
+                          Name="Prompt flow service"
+                          Description="Prompt Flow Service"
+                          Target="[#pfs.bat]"
+                          WorkingDirectory="APPLICATIONFOLDER"
+                          Advertise="no" />
+                <RemoveFile Id="CleanUpShortCut" Directory="StartupFolder" Name="Prompt flow service" On="uninstall"/>
+                <RegistryKey Root="HKCU" Key="Software\Microsoft\$(var.ProductName)" Action="createAndRemoveOnUninstall">
+                    <RegistryValue Name="installed" Type="integer" Value="1" />
+                    <RegistryValue Name="version" Type="string" Value="$(var.ProductVersion)" KeyPath="yes"/>
+                </RegistryKey>
+            </Component>
+
 
         </ComponentGroup>
 
