--- a/scripts/installer/windows/product.wxs
+++ b/scripts/installer/windows/product.wxs
@@ -8,7 +8,8 @@
     <?define ProductAuthor = "Microsoft Corporation" ?>
     <?define ProductResources = ".\resources\" ?>
     <?define UpgradeCode32 = "8b748161-e07a-48f2-8cdf-401480df4694" ?>
-    <?define LogFile = "logfile.txt" ?>
+    <?define LogOutputFile = "pfslogoutputfile.txt" ?>
+    <?define LogErrorFile = "pfslogerrorfile.txt" ?>
 
     <?if $(var.Platform) = "x64" ?>
     <?define PromptflowCliRegistryGuid = "0efd984f-9eec-425b-b230-a3994b69649a" ?>
@@ -88,7 +89,7 @@
         <CustomAction Id="StartPromptFlowService"
             Directory="APPLICATIONFOLDER"
             Execute="commit"
-            ExeCommand="PowerShell.exe -WindowStyle hidden Start-Process -FilePath pfs -NoNewWindow -Wait -RedirectStandardOutput $(var.LogFile) -RedirectStandardError $(var.LogFile) "
+            ExeCommand="PowerShell.exe -WindowStyle hidden Start-Process -FilePath pfs -NoNewWindow -Wait -RedirectStandardOutput $(var.LogOutputFile) -RedirectStandardError $(var.LogErrorFile)"
             Return="asyncNoWait" />
         <InstallExecuteSequence>
             <Custom Action="StartPromptFlowService" Before="InstallFinalize">NOT Installed AND NOT WIX_UPGRADE_DETECTED</Custom>
