--- a/scripts/installer/windows/product.wxs
+++ b/scripts/installer/windows/product.wxs
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
 
-    <?define ProductVersion="0.1.3" ?>
+    <?define ProductVersion="$(env.CLI_VERSION)" ?>
 
     <?define ProductName = "promptflow" ?>
     <?define ProductDescription = "Command-line tools for prompt flow." ?>
